tests/unit-fail-compilation/j016d.c.ref
j016d.c:6:7: error: Program requires the formation of a composite type from a variable length array type whose size is specified by an expression that is not evaluated (in an argument to sizeof).
  Undefined behavior (UB-TTE1). See C11 sec. 6.2.7:3, J.2:1 item 16
Translation failed (config dumped). Run kcc -d j016d.c to see commands run.
